# gp_bot

./: .dockerignore  .env.sample  .funcignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  steady_tweets.yml
.devcontainer/: devcontainer.json
.github/workflows/: build_deploy_workflow.yml  master_gomipeoplebot.yml
GomiPeopleBot/: __init__.py  function.json
corpus/: corpus_gp.txt  corpus_pingu.txt
gp_bot/: __init__.py  api.py  bot.py  config.py  data.py  generate.py  model.py  train.py
gp_bot_func/: __init__.py  function.json
result/: latest_model.pth  latest_model.pth.vocab  model.pth  model.pth.vocab
tests/: conftest.py
tests/data/: tweets.py
tests/gp_bot/: test_bot.py
