[tool.poetry]
name = "gp_bot"
version = "1.2.0"
description = "Gomi-People bot for Twitter"

license = "MIT"

authors = [
    "cielo <cielo.fox@gmail.com>"
]

readme = "README.md"

repository = "https://github.com/NavirePlus/gp_bot"
homepage = "https://github.com/NavirePlus"

keywords = ["Gomi-People", "ｺﾞﾐﾋﾟｰﾌﾟﾙ"]

[tool.poetry.dependencies]
PyYAML = { version = "5.4.*" }
azure-functions = { version = "*" }
numpy = { version = "1.21.*" }
python = ">=3.7 <4.0"
python-twitter = { version = "3.5.*" }
torch = { version = "1.9.*" }
tqdm = { version = "4.62.*" }

[tool.poetry.dev-dependencies]
autopep8 = { version = "1.5.*" }
flake8 = { version = "4.0.*" }
flake8-builtins = { version = "1.5.*" }
flake8-docstrings = { version = "1.6.*" }
flake8-isort = { version = "4.1.*" }
isort = { version = "5.9.*" }
mypy = { version = "0.910" }
pytest = { version = "6.2.*" }
pytest-cov = { version = "3.0.*" }
pytest-mock = { version = "3.6.*" }
#tox = { version = "3.24.*" }

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
